test/fail_compilation/ice8795b.d
/*
TEST_OUTPUT:
---
fail_compilation/ice8795b.d-mixin-7(7): Error: anonymous classes not allowed
---
*/
mixin("interface;");
